# cogni

./: Cargo.toml  README.md
src/: cli.rs  error.rs  exec.rs  lib.rs  main.rs  openai.rs  parse.rs
src/exec/: chat.rs  mod.rs  template.rs
test/: chat.rs
tests/: chat.rs
