[package]
name = "cogni"
authors = ["leoshimo"]
version = "0.2.1"
edition = "2021"
description = "Unix native interface for LLMs"
repository = "https://github.com/leoshimo/cogni"
license = "MIT OR Apache-2.0"
keywords = ["unix", "cli", "command-line", "ai", "llm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.5", features = ["default", "cargo", "env"] }
derive_builder = "0.12.0"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
mockito = "1.1.0"
predicates = "3.0.3"
