[package]
name = "cogni"
authors = ["leoshimo"]
version = "0.2.1"
edition = "2024"
description = "Unix native interface for LLMs"
repository = "https://github.com/leoshimo/cogni"
license = "MIT OR Apache-2.0"
keywords = ["unix", "cli", "command-line", "ai", "llm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["default", "cargo", "env"] }
derive_builder = "0.12.0"
env_logger = "0.10.2"
log = "0.4.28"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
mockito = "1.7.0"
predicates = "3.1.3"
